# Event-ContrastMaximization

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  run_ibec3.sh
config/: davis346.yaml
include/ContrastMaximization/: Evaluation.h  Optimization.h
include/EventData/: EventArray.h
include/EventUtils/: IO.h  Processing.h
include/HomographyIntensity/: Optimization.h
src/: main.cpp
src/ContrastMaximization/: Evaluation.cpp  Optimization.cpp
src/EventData/: EventArray.cpp  H5Reader.cpp
src/EventUtils/: IO.cpp  Processing.cpp
test/: visualize_events.py  visualize_iwe.py
